pages additions and styling

--- a/Frontend/src/Components/Footer/Footer.css
+++ b/Frontend/src/Components/Footer/Footer.css
@@ -11,6 +11,14 @@
 
 .footer ul li{
     list-style: none;
+    cursor: pointer; /* Add pointer cursor */
     display: inline-block;
     margin-left: 20px;
 }
+
+  .footer a {
+    color: #333;
+    text-decoration: none;
+    font-weight: bold;
+  }
+ 
