removed rendering of decks/quizzes of logged in user from search

--- a/Frontend/src/Components/ResultsQuiz/ResultsQuiz.css
+++ b/Frontend/src/Components/ResultsQuiz/ResultsQuiz.css
@@ -9,12 +9,10 @@
   
   
   .results-container {
-    display: flex; 
+    display: flex;
     flex-grow: 1;
-    padding: 0 1rem 2rem;
     margin: auto;
-    max-width: 70rem;
-    min-width: 65rem;
+    width: 70rem;
     overflow: hidden;
   }
   
