--- a/Frontend/src/Components/ResultsDeck/ResultsDeck.css
+++ b/Frontend/src/Components/ResultsDeck/ResultsDeck.css
@@ -11,10 +11,8 @@
 .results-container {
   display: flex;
   flex-grow: 1;
-  padding: 0 1rem 2rem;
   margin: auto;
-  max-width: 70rem;
-  min-width: 65rem;
+  width: 70rem;
   overflow: hidden;
 }
 
