--- a/Frontend/src/Components/DashContent/DashShuffle.css
+++ b/Frontend/src/Components/DashContent/DashShuffle.css
@@ -16,6 +16,7 @@
     flex: 1;
     padding: 20px;
     background-color: #f0f0f0;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: left;
@@ -183,6 +184,5 @@
     color: white;
     border: none;
     border-radius: 5px;
-    font-size: 1rem;
     cursor: pointer;
 }
