--- a/Frontend/src/Components/ResultsHome/ResultsHome.css
+++ b/Frontend/src/Components/ResultsHome/ResultsHome.css
@@ -221,7 +221,7 @@
 }
 
 .preview, .add_favorite {
-    padding: 10px 20px;
+    padding: 10px;
     border: 1px solid #495057;
     border-radius: 8px;
     background-color: #fff;
@@ -230,7 +230,7 @@
     font-weight: 500;
     transition: all 0.2s ease;
     color: #124883;
-    width: 100px;
+    width: 75px;
     text-align: center;
     position: relative;
     overflow: hidden;
