--- a/Frontend/src/Components/DashContent/DashLibrary.css
+++ b/Frontend/src/Components/DashContent/DashLibrary.css
@@ -212,9 +212,10 @@
 }
 .modal-buttons-dashlib {
     display: flex;
-    justify-content: flex-end; /* Align buttons to the right */
+    justify-content: center; /* Center align the buttons */
     gap: 10px; /* Add small space between buttons */
     margin-top: 20px;
+    width: 30%; 
 }
 
 .modal-content-dashlib button {
@@ -222,9 +223,10 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 14px;
     transition: background-color 0.3s ease, transform 0.2s ease;
-    min-width: 100px; /* Set minimum width for buttons */
+    min-width: 50px; /* Set minimum width for buttons */
+    flex: 1; /* Ensure the buttons are equal width */
 }
 
 .modal-content-dashlib button[type="button-dashlib"] {
