--- a/Frontend/src/Components/DashContent/DashCard.css
+++ b/Frontend/src/Components/DashContent/DashCard.css
@@ -265,9 +265,9 @@
 /* Study mode container */
 .study-mode-container {
     width: 100%;
-    max-width: 800px;
     margin: 0 auto;
-    padding: 1rem;
+    height: 100%;
+    /* padding: 1rem; */
 }
 /* Container for 3D perspective */
 .flashcard-scene {
@@ -487,8 +487,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1rem;
-    min-height: 70vh;
+    /* gap: 1rem; */
+    /* min-height: 70vh; */
 }
 /* Card counter */
 .card-info {
@@ -515,14 +515,14 @@
 
 /* Modal Content Container - Reduced Width and Height */
 .study-mode-modal-content {
-    width: 90%; /* Increase width to 90% */
-    max-width: 900px; /* Increase the maximum width */
-    max-height: 90%; /* Increase maximum height to 90% */
+    /* min-width: 50%; */
+    width: 40vw; /* Increase width to 90% */
+    height: auto; /* Increase maximum height to 90% */
     background-color: #ffffff;
     border-radius: 10px;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    overflow-y: auto;
+    /* overflow-y: auto; */
 }
 
 .modal-buttons-dashcard {
